# spwn

./: .env.example  .gitignore  CLAUDE.md  compose.yml  justfile  mise.toml  package.json  pnpm-lock.yaml  readme.md
.claude/: ideas.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-4b.md  phase-5.md  phase-7-tui.md  phase-8-ssh.md  plan-v2.md  plan-v3.md
.github/workflows/: ci.yml
config/: caddy-compose.json  caddy-dev.json
crates/agent-proto/: Cargo.toml  build.rs
crates/agent-proto/proto/: agent.proto
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/tests/: integration.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs  password.rs  routes.rs  session.rs
crates/auth/tests/: integration.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs  types.rs
crates/control-plane/: Cargo.toml
crates/control-plane/src/: admin.rs  caddy_router.rs  console.rs  events.rs  gateway.rs  main.rs  migration.rs  ops.rs  registration.rs  scheduler.rs  subdomain.rs
crates/db/: Cargo.toml
crates/db/migrations/: 0001_init.sql  0002_overlay.sql  0003_real_init.sql  0004_snapshots.sql  0005_hosts.sql  0006_accounts.sql  0007_quota_columns.sql  0008_account_profile.sql  0009_vm_events_cascade.sql  0010_account_theme.sql  0011_cli_auth.sql  0012_vcpus_float.sql  0013_ssh_keys.sql  0014_clone.sql  0015_multinode.sql  0016_roles.sql  0017_millicores.sql  0018_disk_bandwidth.sql  0019_images.sql  0020_region.sql  0021_image_build_log.sql  0022_account_dotfiles.sql  0023_flatten_subdomains.sql  0024_namespaces.sql
crates/db/src/: lib.rs
crates/db/tests/: integration.rs
crates/host-agent/: Cargo.toml
crates/host-agent/src/: agent.rs  health.rs  image_build.rs  lib.rs  main.rs  manager.rs  overlay.rs  platform_key.rs  reconcile.rs
crates/host-agent/tests/: integration.rs
crates/networking/: Cargo.toml
crates/networking/src/: ip.rs  iptables.rs  lib.rs  tap.rs
crates/router-sync/: Cargo.toml
crates/router-sync/src/: lib.rs  stopped.html
crates/vm-manager/: Cargo.toml
crates/vm-manager/src/: health.rs  main.rs  manager.rs  overlay.rs  reconcile.rs  subdomain.rs
docker/: control-plane.Dockerfile  ssh-gateway.Dockerfile
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: api.ts  index.css  main.tsx  queryClient.ts  router.tsx  themes.json
frontend/src/components/: CommandPalette.tsx  ConsolePanel.tsx  NamespaceSwitcher.tsx  NavUser.tsx  Sidebar.tsx  StatusBadge.tsx
frontend/src/components/ui/: command.tsx  dialog.tsx  loader.tsx  sheet.tsx  sidebar.tsx  sonner.tsx
frontend/src/hooks/: useActiveNamespace.ts  useBrowserState.tsx  useKeyboardShortcuts.ts  useRecentVms.ts  useTheme.ts  useVmEvents.ts
frontend/src/layouts/: AuthedLayout.tsx  RootLayout.tsx
frontend/src/lib/: utils.ts
frontend/src/pages/: AccountPage.tsx  AdminPage.tsx  CliAuthPage.tsx  HomePage.tsx  IdentityPage.tsx  ImagesPage.tsx  LoginPage.tsx  NamespaceDetailPage.tsx  NamespacesPage.tsx  SignupPage.tsx  SshKeysPage.tsx  ThemesPage.tsx  TokensPage.tsx  VmDetailPage.tsx  VmListPage.tsx
scripts/: host-setup.sh  rootfs-config.sh  spwn  test-shell.sh
services/: go.mod  go.sum
services/client/: client.go  config.go  knownhosts.go
services/cmd/spwn/: auth.go  helpers.go  main.go  root.go  snapshot.go  stubs.go  styles.go  vm.go  vm_test.go
services/cmd/ssh-gateway/: gwtui.go  main.go
services/proto/agent/: agent.pb.go  agent_grpc.pb.go
services/tui/: app.go  keys.go  picker.go  styles.go  vm_detail.go  vm_list.go
