[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
db = { path = "../db" }
auth = { path = "../auth" }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
serde_json = "1"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
bytes = "1"
