[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
db = { path = "../db" }
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
argon2 = "0.5"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
tracing = "0.1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
bytes = "1"

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
serde_json = "1"
