[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "migrate", "macros"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
