[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "migrate", "macros", "json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls"] }
uuid = { version = "1", features = ["v4"] }
