[package]
name = "host-agent"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "spwn-host-agent"
path = "src/main.rs"

[lib]
name = "host_agent"
path = "src/lib.rs"

[dependencies]
agent-proto = { path = "../agent-proto" }
common = { path = "../common" }
networking = { path = "../networking" }
db = { path = "../db" }
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = ["transport"] }
fctools = { version = "0.7.0-alpha.1", features = [
    "tokio-runtime",
    "nix-syscall-backend",
    "direct-process-spawner",
    "jailed-vmm-executor",
    "vm",
] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
nix = { version = "0.29", features = ["signal", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-core = "0.3"

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
