[package]
name = "vm-manager"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "spwn-vm-manager"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
networking = { path = "../networking" }
db = { path = "../db" }
router-sync = { path = "../router-sync" }
api = { path = "../api" }
tokio = { version = "1", features = ["full"] }
fctools = { version = "0.7.0-alpha.1", features = [
    "tokio-runtime",
    "nix-syscall-backend",
    "direct-process-spawner",
    "unrestricted-vmm-executor",
    "vm",
] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.29", features = ["signal", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
axum = "0.8"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls"] }
